docs: auth
